--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+      "cypress:open": "cypress open",
+  "cypress:run": "cypress run --record"
+
   },
   "keywords": [],
   "author": "",
@@ -12,4 +15,5 @@
   "devDependencies": {
     "cypress": "^14.5.1"
   }
+  
 }
